--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -177,6 +177,75 @@
     "        \"\"\"this function just returns the adjacency list for all the nodes\"\"\"\n",
     "        return self.__adjacency_list"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This graph doesn't quite serve our purposes just yet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From what I remember of what we decided, we wanted to be able to add one node (a paper) to the graph, then for every paper it referenced, at it to the graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The for each of the new nodes added, add their references (nodes) to the graph as well"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And then add _their_ references to the graph, until we get to some arbitrary distance (number of connections) from the original paper (node) than we added"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the paper will contain some information: it will know what papers it references, but we also need a way to assign it a distance from the original paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So let's define a Paper class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Paper:\n",
+    "\n",
+    "    def __init__(self, references):\n",
+    "        \"\"\"constructor to create a Paper,\n",
+    "        it needs to know what it's references are\n",
+    "        and it's distance from the original paper:\n",
+    "        it's default will be 0 (each paper assumes it is the \n",
+    "        original paper)\"\"\"\n",
+    "        self.__refs = references\n",
+    "        self.__dist = 0\n",
+    "\n",
+    "    def get_refs(self):\n",
+    "        return self.__refs\n",
+    "    \n",
+    "    def get_dist(self):\n",
+    "        return self.__dist\n",
+    "    \n",
+    "    def set_dist(self, distance):\n",
+    "        self.__dist = distance"
+   ]
   }
  ],
  "metadata": {
