added type hints to data Graph and Paper

--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -134,15 +134,15 @@
    "source": [
     "class Graph:\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self) -> None:\n",
     "        \"\"\"this function will be called when we create a new Graph;\n",
     "        i.e. graph = Graph();\n",
     "        it just initializes two empty lists,\n",
     "        one for each node and one for for all the nodes it is connected to\"\"\"\n",
-    "        self.__adjacency_list = [] # self.whatever just means that the list is an attribute of the Graph\n",
-    "        self.__nodes = []\n",
+    "        self.__adjacency_list: list = [] # self.whatever just means that the list is an attribute of the Graph\n",
+    "        self.__nodes: list = []\n",
     "\n",
-    "    def add_node(self, node):\n",
+    "    def add_node(self, node) -> None:\n",
     "        \"\"\"this function accepts a node as an argument\n",
     "        and add it to the nodes list, then adds an empty\n",
     "        list to the adjacency_list that we will populate\n",
@@ -150,7 +150,7 @@
     "        self.__adjacency_list.append([])\n",
     "        self.__nodes.append(node)\n",
     "        \n",
-    "    def add_edge(self, nodeX, nodeY):\n",
+    "    def add_edge(self, nodeX, nodeY) -> None:\n",
     "        \"\"\"this function accepts two nodes, arbitrarily X and Y;\n",
     "        adding nodeY to the adjacency list of nodeX;\n",
     "        NOTE: it won't add nodeX to the adjacency list of nodeY\n",
@@ -164,16 +164,18 @@
     "        (all the nodes connected) to any given node as an argument\"\"\"\n",
     "        return self.__my_adjacency_list[node]\n",
     "        \n",
-    "    def print_str(self):\n",
+    "    def __str__(self) -> str:\n",
     "        \"\"\"printing, mainly just debuggin, not exciting\"\"\"\n",
+    "        out: str = \"\"\n",
     "        for i in range(len(self.__adjacency_list)):\n",
-    "            print(\"node\", i, \"(\", self.__nodes[i], \") = \", self.__adjacency_list[i])\n",
+    "            out.append(\"node\", i, \"(\", self.__nodes[i], \") = \", self.__adjacency_list[i])\n",
+    "        return out\n",
     "\n",
-    "    def get_nodes(self):\n",
+    "    def get_nodes(self) -> list:\n",
     "        \"\"\"this function just returns all the nodes\"\"\"\n",
     "        return self.__nodes\n",
     "    \n",
-    "    def get_adjacency_list(self):\n",
+    "    def get_adjacency_list(self) -> list[list]:\n",
     "        \"\"\"this function just returns the adjacency list for all the nodes\"\"\"\n",
     "        return self.__adjacency_list"
    ]
