THE PAPER IS THE DATA STRUCTURE

--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -248,6 +248,13 @@
     "    def set_dist(self, distance):\n",
     "        self.__dist = distance"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# THE PAPER IS THE DATA STRUCTURE"
+   ]
   }
  ],
  "metadata": {
