--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
     "        if self.get_distance() > 3:\n",
     "            return []\n",
     "        # otherwise, return a list of Paper objects\n",
-    "        return [Paper(random.randint(1, 10) * n, self.get_distance() + 1) for n in range(1, 6)]\n",
+    "        return [Paper(random.randint(self.get_name() - 5, self.get_name() - 1), self.get_distance() + 1) for _ in range(5)]\n",
     "\n",
     "    def get_name(self):\n",
     "        return self.__name\n",
@@ -212,29 +212,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "paper = Paper()"
+    "paper = Paper(2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2: [1: [5: [4: [], 8: [], 9: [], 8: [], 45: []], 4: [10: [], 14: [], 3: [], 4: [], 10: []], 12: [4: [], 18: [], 30: [], 4: [], 45: []], 16: [9: [], 14: [], 12: [], 32: [], 50: []], 25: [1: [], 6: [], 21: [], 24: [], 25: []]], 6: [4: [6: [], 4: [], 6: [], 28: [], 10: []], 12: [6: [], 20: [], 15: [], 4: [], 40: []], 27: [2: [], 14: [], 6: [], 36: [], 25: []], 40: [6: [], 20: [], 12: [], 8: [], 5: []], 20: [5: [], 4: [], 12: [], 8: [], 35: []]], 15: [8: [6: [], 6: [], 18: [], 24: [], 20: []], 10: [2: [], 20: [], 9: [], 36: [], 20: []], 9: [8: [], 14: [], 15: [], 36: [], 20: []], 24: [1: [], 8: [], 3: [], 24: [], 35: []], 25: [2: [], 8: [], 30: [], 24: [], 20: []]], 32: [7: [8: [], 6: [], 15: [], 12: [], 20: []], 18: [9: [], 10: [], 30: [], 28: [], 50: []], 21: [6: [], 8: [], 9: [], 36: [], 40: []], 8: [1: [], 4: [], 9: [], 12: [], 35: []], 50: [2: [], 14: [], 21: [], 40: [], 40: []]], 45: [5: [9: [], 2: [], 6: [], 36: [], 25: []], 12: [2: [], 10: [], 21: [], 12: [], 40: []], 3: [5: [], 18: [], 9: [], 36: [], 10: []], 20: [9: [], 20: [], 12: [], 12: [], 30: []], 15: [9: [], 18: [], 3: [], 40: [], 30: []]]],\n",
-       " 16: [1: [2: [6: [], 10: [], 12: [], 4: [], 20: []], 20: [2: [], 4: [], 24: [], 8: [], 45: []], 9: [3: [], 16: [], 27: [], 12: [], 25: []], 36: [10: [], 14: [], 12: [], 36: [], 20: []], 25: [7: [], 12: [], 24: [], 36: [], 40: []]], 4: [4: [4: [], 4: [], 18: [], 4: [], 50: []], 18: [4: [], 20: [], 12: [], 4: [], 10: []], 3: [4: [], 4: [], 3: [], 24: [], 10: []], 36: [4: [], 10: [], 24: [], 16: [], 45: []], 15: [10: [], 20: [], 24: [], 16: [], 40: []]], 21: [4: [2: [], 4: [], 21: [], 24: [], 35: []], 14: [8: [], 2: [], 6: [], 4: [], 35: []], 18: [2: [], 8: [], 12: [], 16: [], 45: []], 32: [3: [], 14: [], 9: [], 20: [], 40: []], 20: [2: [], 16: [], 27: [], 8: [], 5: []]], 36: [1: [2: [], 8: [], 9: [], 28: [], 40: []], 16: [4: [], 14: [], 3: [], 12: [], 35: []], 3: [7: [], 10: [], 24: [], 20: [], 35: []], 36: [8: [], 6: [], 12: [], 20: [], 20: []], 5: [10: [], 18: [], 3: [], 24: [], 5: []]], 5: [10: [8: [], 18: [], 27: [], 12: [], 5: []], 18: [2: [], 6: [], 6: [], 40: [], 10: []], 12: [7: [], 4: [], 30: [], 16: [], 50: []], 40: [1: [], 20: [], 6: [], 28: [], 50: []], 50: [9: [], 12: [], 15: [], 16: [], 30: []]]],\n",
-       " 12: [5: [7: [3: [], 10: [], 24: [], 24: [], 10: []], 2: [8: [], 20: [], 30: [], 8: [], 10: []], 27: [4: [], 18: [], 15: [], 12: [], 30: []], 8: [4: [], 12: [], 15: [], 12: [], 40: []], 45: [5: [], 20: [], 27: [], 4: [], 45: []]], 10: [2: [3: [], 10: [], 6: [], 8: [], 45: []], 6: [5: [], 10: [], 30: [], 16: [], 30: []], 12: [5: [], 18: [], 24: [], 20: [], 5: []], 8: [7: [], 10: [], 3: [], 4: [], 30: []], 15: [5: [], 6: [], 24: [], 36: [], 35: []]], 27: [1: [2: [], 4: [], 9: [], 36: [], 5: []], 12: [10: [], 18: [], 9: [], 28: [], 15: []], 3: [5: [], 12: [], 3: [], 24: [], 20: []], 16: [2: [], 12: [], 27: [], 28: [], 50: []], 15: [4: [], 6: [], 9: [], 28: [], 5: []]], 12: [6: [7: [], 8: [], 15: [], 12: [], 10: []], 14: [1: [], 16: [], 12: [], 16: [], 40: []], 18: [5: [], 8: [], 12: [], 4: [], 20: []], 28: [6: [], 10: [], 6: [], 20: [], 30: []], 45: [7: [], 18: [], 18: [], 4: [], 10: []]], 25: [3: [10: [], 10: [], 3: [], 8: [], 50: []], 14: [6: [], 12: [], 21: [], 40: [], 45: []], 6: [7: [], 20: [], 12: [], 20: [], 5: []], 28: [1: [], 18: [], 27: [], 16: [], 30: []], 35: [2: [], 12: [], 30: [], 24: [], 10: []]]],\n",
-       " 20: [9: [5: [7: [], 12: [], 21: [], 20: [], 45: []], 6: [4: [], 14: [], 21: [], 12: [], 50: []], 30: [5: [], 14: [], 27: [], 4: [], 25: []], 20: [4: [], 14: [], 30: [], 40: [], 30: []], 40: [8: [], 16: [], 12: [], 36: [], 40: []]], 6: [2: [5: [], 18: [], 30: [], 24: [], 10: []], 8: [5: [], 8: [], 12: [], 12: [], 5: []], 3: [4: [], 16: [], 30: [], 8: [], 40: []], 28: [10: [], 8: [], 21: [], 32: [], 35: []], 20: [3: [], 2: [], 6: [], 28: [], 20: []]], 9: [9: [8: [], 2: [], 27: [], 16: [], 10: []], 16: [3: [], 16: [], 27: [], 36: [], 50: []], 18: [8: [], 20: [], 27: [], 28: [], 45: []], 32: [3: [], 16: [], 24: [], 20: [], 20: []], 25: [9: [], 16: [], 12: [], 20: [], 40: []]], 8: [5: [4: [], 10: [], 18: [], 24: [], 45: []], 4: [3: [], 6: [], 12: [], 28: [], 15: []], 12: [2: [], 14: [], 21: [], 24: [], 45: []], 32: [7: [], 2: [], 12: [], 28: [], 35: []], 50: [1: [], 20: [], 21: [], 32: [], 5: []]], 30: [5: [7: [], 14: [], 27: [], 36: [], 50: []], 8: [8: [], 8: [], 15: [], 28: [], 40: []], 3: [7: [], 12: [], 21: [], 12: [], 40: []], 12: [10: [], 18: [], 3: [], 28: [], 50: []], 50: [1: [], 4: [], 21: [], 12: [], 40: []]]],\n",
-       " 15: [1: [5: [7: [], 12: [], 12: [], 32: [], 30: []], 12: [7: [], 10: [], 21: [], 20: [], 10: []], 24: [1: [], 18: [], 3: [], 24: [], 20: []], 8: [1: [], 2: [], 12: [], 16: [], 5: []], 50: [3: [], 8: [], 9: [], 32: [], 10: []]], 20: [4: [8: [], 10: [], 18: [], 12: [], 50: []], 20: [2: [], 6: [], 15: [], 8: [], 50: []], 3: [5: [], 20: [], 21: [], 28: [], 20: []], 8: [10: [], 8: [], 6: [], 20: [], 50: []], 10: [10: [], 2: [], 18: [], 36: [], 35: []]], 18: [2: [9: [], 12: [], 3: [], 28: [], 40: []], 4: [7: [], 12: [], 24: [], 12: [], 35: []], 9: [9: [], 10: [], 30: [], 36: [], 40: []], 32: [7: [], 20: [], 15: [], 24: [], 20: []], 10: [5: [], 16: [], 12: [], 32: [], 50: []]], 40: [7: [6: [], 2: [], 24: [], 24: [], 15: []], 16: [4: [], 12: [], 15: [], 24: [], 25: []], 30: [5: [], 18: [], 3: [], 36: [], 20: []], 8: [4: [], 14: [], 24: [], 36: [], 20: []], 40: [8: [], 16: [], 3: [], 8: [], 25: []]], 20: [7: [4: [], 10: [], 30: [], 24: [], 40: []], 18: [9: [], 12: [], 21: [], 36: [], 30: []], 18: [8: [], 10: [], 15: [], 20: [], 20: []], 8: [4: [], 12: [], 6: [], 36: [], 15: []], 20: [4: [], 16: [], 15: [], 40: [], 45: []]]]]"
+       "[2022: [2019: [2015: [2013: [], 2014: [], 2012: [], 2010: [], 2012: []], 2016: [2015: [], 2012: [], 2012: [], 2012: [], 2014: []], 2015: [2013: [], 2014: [], 2012: [], 2013: [], 2014: []], 2017: [2016: [], 2013: [], 2013: [], 2016: [], 2012: []], 2018: [2016: [], 2017: [], 2015: [], 2013: [], 2017: []]], 2017: [2012: [2011: [], 2011: [], 2008: [], 2011: [], 2011: []], 2013: [2009: [], 2010: [], 2012: [], 2011: [], 2008: []], 2013: [2012: [], 2011: [], 2008: [], 2012: [], 2011: []], 2012: [2010: [], 2008: [], 2011: [], 2010: [], 2010: []], 2016: [2011: [], 2015: [], 2014: [], 2013: [], 2011: []]], 2020: [2017: [2012: [], 2013: [], 2016: [], 2012: [], 2012: []], 2018: [2015: [], 2013: [], 2017: [], 2013: [], 2013: []], 2018: [2013: [], 2015: [], 2016: [], 2014: [], 2014: []], 2018: [2015: [], 2016: [], 2016: [], 2016: [], 2016: []], 2015: [2014: [], 2011: [], 2012: [], 2010: [], 2011: []]], 2021: [2019: [2018: [], 2015: [], 2015: [], 2014: [], 2014: []], 2018: [2016: [], 2017: [], 2016: [], 2017: [], 2016: []], 2017: [2013: [], 2015: [], 2014: [], 2013: [], 2014: []], 2017: [2012: [], 2012: [], 2015: [], 2016: [], 2012: []], 2017: [2013: [], 2012: [], 2012: [], 2016: [], 2012: []]], 2020: [2019: [2014: [], 2015: [], 2014: [], 2017: [], 2017: []], 2016: [2015: [], 2012: [], 2011: [], 2012: [], 2015: []], 2017: [2013: [], 2016: [], 2014: [], 2016: [], 2016: []], 2017: [2013: [], 2014: [], 2013: [], 2016: [], 2013: []], 2018: [2015: [], 2015: [], 2013: [], 2017: [], 2017: []]]],\n",
+       " 2020: [2018: [2017: [2015: [], 2012: [], 2014: [], 2015: [], 2016: []], 2015: [2013: [], 2013: [], 2011: [], 2012: [], 2013: []], 2014: [2013: [], 2012: [], 2010: [], 2010: [], 2011: []], 2014: [2012: [], 2009: [], 2013: [], 2012: [], 2012: []], 2017: [2016: [], 2013: [], 2015: [], 2013: [], 2014: []]], 2016: [2013: [2008: [], 2011: [], 2010: [], 2008: [], 2012: []], 2012: [2007: [], 2009: [], 2010: [], 2011: [], 2011: []], 2011: [2006: [], 2007: [], 2010: [], 2010: [], 2007: []], 2014: [2010: [], 2011: [], 2011: [], 2009: [], 2010: []], 2012: [2007: [], 2010: [], 2008: [], 2011: [], 2008: []]], 2018: [2014: [2013: [], 2011: [], 2011: [], 2012: [], 2012: []], 2017: [2014: [], 2014: [], 2014: [], 2014: [], 2016: []], 2016: [2014: [], 2011: [], 2014: [], 2013: [], 2012: []], 2015: [2012: [], 2013: [], 2010: [], 2014: [], 2011: []], 2014: [2009: [], 2011: [], 2013: [], 2013: [], 2013: []]], 2018: [2015: [2011: [], 2011: [], 2012: [], 2011: [], 2013: []], 2017: [2013: [], 2015: [], 2016: [], 2014: [], 2014: []], 2016: [2014: [], 2014: [], 2012: [], 2013: [], 2012: []], 2014: [2013: [], 2012: [], 2010: [], 2013: [], 2009: []], 2017: [2012: [], 2012: [], 2012: [], 2012: [], 2015: []]], 2016: [2012: [2007: [], 2008: [], 2007: [], 2008: [], 2011: []], 2014: [2011: [], 2009: [], 2013: [], 2013: [], 2012: []], 2014: [2009: [], 2009: [], 2013: [], 2013: [], 2012: []], 2011: [2006: [], 2010: [], 2008: [], 2010: [], 2008: []], 2011: [2010: [], 2009: [], 2007: [], 2006: [], 2006: []]]],\n",
+       " 2023: [2019: [2015: [2011: [], 2014: [], 2014: [], 2012: [], 2012: []], 2016: [2014: [], 2011: [], 2013: [], 2014: [], 2014: []], 2018: [2014: [], 2014: [], 2015: [], 2013: [], 2013: []], 2014: [2012: [], 2012: [], 2012: [], 2013: [], 2012: []], 2014: [2009: [], 2010: [], 2009: [], 2012: [], 2012: []]], 2020: [2019: [2014: [], 2018: [], 2014: [], 2015: [], 2015: []], 2019: [2017: [], 2016: [], 2014: [], 2014: [], 2016: []], 2019: [2018: [], 2014: [], 2015: [], 2016: [], 2014: []], 2016: [2015: [], 2012: [], 2014: [], 2011: [], 2013: []], 2016: [2015: [], 2012: [], 2015: [], 2014: [], 2015: []]], 2020: [2018: [2014: [], 2013: [], 2017: [], 2015: [], 2013: []], 2015: [2013: [], 2011: [], 2010: [], 2012: [], 2014: []], 2019: [2018: [], 2017: [], 2016: [], 2014: [], 2016: []], 2018: [2016: [], 2014: [], 2015: [], 2017: [], 2016: []], 2018: [2014: [], 2017: [], 2016: [], 2013: [], 2017: []]], 2020: [2016: [2011: [], 2011: [], 2013: [], 2012: [], 2014: []], 2016: [2014: [], 2013: [], 2013: [], 2011: [], 2011: []], 2015: [2012: [], 2013: [], 2012: [], 2012: [], 2010: []], 2016: [2011: [], 2012: [], 2014: [], 2014: [], 2015: []], 2019: [2018: [], 2017: [], 2014: [], 2014: [], 2014: []]], 2020: [2019: [2014: [], 2018: [], 2018: [], 2016: [], 2017: []], 2015: [2012: [], 2013: [], 2013: [], 2010: [], 2014: []], 2016: [2015: [], 2015: [], 2012: [], 2014: [], 2012: []], 2016: [2013: [], 2013: [], 2013: [], 2014: [], 2012: []], 2015: [2011: [], 2013: [], 2012: [], 2013: [], 2012: []]]],\n",
+       " 2022: [2017: [2014: [2011: [], 2010: [], 2012: [], 2013: [], 2013: []], 2013: [2011: [], 2008: [], 2009: [], 2010: [], 2008: []], 2015: [2012: [], 2014: [], 2013: [], 2012: [], 2013: []], 2014: [2012: [], 2013: [], 2010: [], 2011: [], 2011: []], 2016: [2012: [], 2014: [], 2013: [], 2012: [], 2014: []]], 2019: [2016: [2014: [], 2015: [], 2012: [], 2013: [], 2014: []], 2016: [2014: [], 2013: [], 2011: [], 2015: [], 2012: []], 2018: [2017: [], 2014: [], 2017: [], 2013: [], 2016: []], 2015: [2013: [], 2012: [], 2010: [], 2013: [], 2013: []], 2015: [2012: [], 2011: [], 2012: [], 2011: [], 2013: []]], 2020: [2015: [2013: [], 2014: [], 2013: [], 2014: [], 2013: []], 2019: [2018: [], 2017: [], 2018: [], 2014: [], 2016: []], 2019: [2018: [], 2014: [], 2014: [], 2015: [], 2016: []], 2016: [2015: [], 2011: [], 2015: [], 2014: [], 2013: []], 2018: [2013: [], 2013: [], 2013: [], 2015: [], 2014: []]], 2021: [2020: [2019: [], 2019: [], 2019: [], 2016: [], 2018: []], 2018: [2016: [], 2016: [], 2017: [], 2017: [], 2014: []], 2018: [2013: [], 2016: [], 2013: [], 2015: [], 2016: []], 2016: [2011: [], 2012: [], 2013: [], 2013: [], 2013: []], 2019: [2015: [], 2018: [], 2017: [], 2016: [], 2017: []]], 2017: [2015: [2013: [], 2012: [], 2010: [], 2012: [], 2010: []], 2012: [2007: [], 2009: [], 2007: [], 2008: [], 2008: []], 2016: [2012: [], 2015: [], 2012: [], 2013: [], 2015: []], 2015: [2013: [], 2011: [], 2013: [], 2011: [], 2011: []], 2015: [2013: [], 2010: [], 2014: [], 2011: [], 2013: []]]],\n",
+       " 2023: [2021: [2019: [2014: [], 2015: [], 2015: [], 2016: [], 2014: []], 2020: [2015: [], 2019: [], 2016: [], 2017: [], 2017: []], 2017: [2015: [], 2012: [], 2014: [], 2015: [], 2016: []], 2018: [2017: [], 2016: [], 2017: [], 2016: [], 2017: []], 2016: [2013: [], 2013: [], 2014: [], 2015: [], 2012: []]], 2020: [2019: [2018: [], 2014: [], 2015: [], 2016: [], 2014: []], 2016: [2013: [], 2011: [], 2012: [], 2013: [], 2012: []], 2019: [2017: [], 2017: [], 2018: [], 2015: [], 2018: []], 2018: [2016: [], 2014: [], 2016: [], 2017: [], 2014: []], 2019: [2015: [], 2017: [], 2016: [], 2015: [], 2015: []]], 2020: [2018: [2017: [], 2013: [], 2015: [], 2013: [], 2016: []], 2016: [2012: [], 2014: [], 2015: [], 2015: [], 2014: []], 2018: [2016: [], 2016: [], 2016: [], 2016: [], 2014: []], 2015: [2014: [], 2010: [], 2011: [], 2012: [], 2010: []], 2017: [2013: [], 2016: [], 2014: [], 2013: [], 2015: []]], 2022: [2020: [2019: [], 2019: [], 2015: [], 2019: [], 2015: []], 2019: [2018: [], 2016: [], 2018: [], 2014: [], 2017: []], 2021: [2017: [], 2019: [], 2016: [], 2017: [], 2018: []], 2017: [2015: [], 2014: [], 2014: [], 2012: [], 2015: []], 2017: [2013: [], 2013: [], 2016: [], 2014: [], 2016: []]], 2021: [2017: [2016: [], 2013: [], 2013: [], 2013: [], 2012: []], 2020: [2017: [], 2019: [], 2017: [], 2019: [], 2019: []], 2017: [2014: [], 2014: [], 2014: [], 2016: [], 2014: []], 2020: [2015: [], 2016: [], 2018: [], 2015: [], 2017: []], 2017: [2013: [], 2013: [], 2013: [], 2014: [], 2013: []]]]]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,22 +266,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "paper.find_distance(2)"
+    "paper.find_distance(2015)"
    ]
   },
   {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -302,13 +302,20 @@
        "inf"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "paper.find_distance(12345)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
    ]
   }
  ],
