remove team notes

--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -22,111 +22,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### team notes\n",
-    "Below is a basic outline of our data structure, a directed graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It's heavily commented (some of which won't make it to submission) to keep it as clear as possible"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Shout if anything is confusing and we'll figure it out, or if I've misinterpreted any of the decisions we made the first time we talked about it "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### note on classes\n",
-    "this is just for clarity, won't make the final report"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We _could_ represent the graph without declaring a new class, but this will keep things cleaner for us in the long run"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The alternative would probably to create a dictionary of lists, that would look a little like this"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph = {\n",
-    "    'adjacency_list': [[], [], []], # what nodes are connected to what nodes, every node would have it's own list\n",
-    "    'node': [1, 69, 420] # just a list of all the nodes\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We would then have to define functions to add/get nodes and edges anyway, for example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_node(graph, x):\n",
-    "    graph['adjacency_list'].append([])\n",
-    "    graph['nodles'].append(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And then to _get_ a node, it would pass the index, much like the method in the class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_node(graph, index):\n",
-    "    return graph['nodes'][index]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When you see *self* as one of the variables in the below class method, that just means we want to act on itself, so it saves us having to pass the `graph` variable to every function we all"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# THE PAPER IS THE GRAPH"
    ]
   },
@@ -152,15 +47,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So let's try again and create a different Paper class"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +65,7 @@
     "        # return an empty list if we have exceeded relevant depth\n",
     "        if self.get_distance() > 3:\n",
     "            return []\n",
-    "        # otherwise, return a list of Paper objects\n",
+    "        # otherwise, return a list of Paper objects, their distance set to this paper's distance + 1\n",
     "        return [Paper(self.get_name() - n, self.get_distance() + 1) for n in range(1, 6)]\n",
     "    \n",
     "    def find_distance(self, name):\n",
@@ -351,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -360,13 +248,33 @@
        "inf"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "paper.find_distance(12345)"
+    "paper.find_distance(2025)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paper.find_distance(1997)"
    ]
   },
   {
