--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,11 @@
     "        # if the queue is empty and the paper hasn't been found, return infinity\n",
     "        return float('inf')\n",
     "    \n",
+    "    def get_edges(self, name):\n",
+    "        # NOTE can you think of good stop case?\n",
+    "        # i.e. a natural time to stop the recursion?\n",
+    "        \n",
+    "    \n",
     "    def get_name(self):\n",
     "        return self.__name\n",
     "    \n",
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paper.get_edges(2023)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +151,7 @@
        " 2019: [2018: [2017: [2016: [], 2015: [], 2014: [], 2013: [], 2012: []], 2016: [2015: [], 2014: [], 2013: [], 2012: [], 2011: []], 2015: [2014: [], 2013: [], 2012: [], 2011: [], 2010: []], 2014: [2013: [], 2012: [], 2011: [], 2010: [], 2009: []], 2013: [2012: [], 2011: [], 2010: [], 2009: [], 2008: []]], 2017: [2016: [2015: [], 2014: [], 2013: [], 2012: [], 2011: []], 2015: [2014: [], 2013: [], 2012: [], 2011: [], 2010: []], 2014: [2013: [], 2012: [], 2011: [], 2010: [], 2009: []], 2013: [2012: [], 2011: [], 2010: [], 2009: [], 2008: []], 2012: [2011: [], 2010: [], 2009: [], 2008: [], 2007: []]], 2016: [2015: [2014: [], 2013: [], 2012: [], 2011: [], 2010: []], 2014: [2013: [], 2012: [], 2011: [], 2010: [], 2009: []], 2013: [2012: [], 2011: [], 2010: [], 2009: [], 2008: []], 2012: [2011: [], 2010: [], 2009: [], 2008: [], 2007: []], 2011: [2010: [], 2009: [], 2008: [], 2007: [], 2006: []]], 2015: [2014: [2013: [], 2012: [], 2011: [], 2010: [], 2009: []], 2013: [2012: [], 2011: [], 2010: [], 2009: [], 2008: []], 2012: [2011: [], 2010: [], 2009: [], 2008: [], 2007: []], 2011: [2010: [], 2009: [], 2008: [], 2007: [], 2006: []], 2010: [2009: [], 2008: [], 2007: [], 2006: [], 2005: []]], 2014: [2013: [2012: [], 2011: [], 2010: [], 2009: [], 2008: []], 2012: [2011: [], 2010: [], 2009: [], 2008: [], 2007: []], 2011: [2010: [], 2009: [], 2008: [], 2007: [], 2006: []], 2010: [2009: [], 2008: [], 2007: [], 2006: [], 2005: []], 2009: [2008: [], 2007: [], 2006: [], 2005: [], 2004: []]]]]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
