Fix execution counts and add get_edges method in lit-review.ipynb

--- a/lit-review.ipynb
+++ b/lit-review.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +92,10 @@
     "    def get_edges(self, name):\n",
     "        # NOTE can you think of good stop case?\n",
     "        # i.e. a natural time to stop the recursion?\n",
+    "        if self.get_name() == name:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return sum([reference.get_edges(name) for reference in self.get_references()])\n",
     "        \n",
     "    \n",
     "    def get_name(self):\n",
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,22 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "71"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "paper.get_edges(2023)"
+    "paper.get_edges(2010)"
    ]
   },
   {
